; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/gin/extr_ginentrypage.c_ginEntryFillRoot.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/gin/extr_ginentrypage.c_ginEntryFillRoot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@InvalidOffsetNumber = common dso_local global i64 0, align 8
@ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [38 x i8] c"failed to add item to index root page\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ginEntryFillRoot(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i64, align 8
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %14 = load i32, i32* %10, align 4
  %15 = call i32 @getRightMostTuple(i32 %14)
  %16 = load i32, i32* %10, align 4
  %17 = load i32, i32* %9, align 4
  %18 = call i64 @GinFormInteriorTuple(i32 %15, i32 %16, i32 %17)
  store i64 %18, i64* %13, align 8
  %19 = load i32, i32* %8, align 4
  %20 = load i64, i64* %13, align 8
  %21 = trunc i64 %20 to i32
  %22 = load i64, i64* %13, align 8
  %23 = call i32 @IndexTupleSize(i64 %22)
  %24 = load i64, i64* @InvalidOffsetNumber, align 8
  %25 = call i64 @PageAddItem(i32 %19, i32 %21, i32 %23, i64 %24, i32 0, i32 0)
  %26 = load i64, i64* @InvalidOffsetNumber, align 8
  %27 = icmp eq i64 %25, %26
  br i1 %27, label %28, label %31

28:                                               ; preds = %6
  %29 = load i32, i32* @ERROR, align 4
  %30 = call i32 @elog(i32 %29, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0))
  br label %31

31:                                               ; preds = %28, %6
  %32 = load i64, i64* %13, align 8
  %33 = call i32 @pfree(i64 %32)
  %34 = load i32, i32* %12, align 4
  %35 = call i32 @getRightMostTuple(i32 %34)
  %36 = load i32, i32* %12, align 4
  %37 = load i32, i32* %11, align 4
  %38 = call i64 @GinFormInteriorTuple(i32 %35, i32 %36, i32 %37)
  store i64 %38, i64* %13, align 8
  %39 = load i32, i32* %8, align 4
  %40 = load i64, i64* %13, align 8
  %41 = trunc i64 %40 to i32
  %42 = load i64, i64* %13, align 8
  %43 = call i32 @IndexTupleSize(i64 %42)
  %44 = load i64, i64* @InvalidOffsetNumber, align 8
  %45 = call i64 @PageAddItem(i32 %39, i32 %41, i32 %43, i64 %44, i32 0, i32 0)
  %46 = load i64, i64* @InvalidOffsetNumber, align 8
  %47 = icmp eq i64 %45, %46
  br i1 %47, label %48, label %51

48:                                               ; preds = %31
  %49 = load i32, i32* @ERROR, align 4
  %50 = call i32 @elog(i32 %49, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0))
  br label %51

51:                                               ; preds = %48, %31
  %52 = load i64, i64* %13, align 8
  %53 = call i32 @pfree(i64 %52)
  ret void
}

declare dso_local i64 @GinFormInteriorTuple(i32, i32, i32) #1

declare dso_local i32 @getRightMostTuple(i32) #1

declare dso_local i64 @PageAddItem(i32, i32, i32, i64, i32, i32) #1

declare dso_local i32 @IndexTupleSize(i64) #1

declare dso_local i32 @elog(i32, i8*) #1

declare dso_local i32 @pfree(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
